# web-template

./: .gcloudignore  Cargo.toml  Dockerfile  cloudbuild.yaml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/errors/: error.rs  mod.rs
src/init/: app_config.rs  mod.rs  telemetry_config.rs
src/responses/: mod.rs
src/routes/: heartbeat.rs  mod.rs
src/services/: mod.rs
tests/api/rest/: heartbeat.rs
tests/utils/: mod.rs  test_init.rs
