[package]
name = "web_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_template"


[dependencies]
actix-web = "4.0"
anyhow = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
listenfd = "0.5"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-tracing = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

#Tracing Libs
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.17" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.5"